# franka_control_suite

./: .gitignore  CMakeLists.txt  README.md
bash_scripts/: build.sh
example_python_scripts/: example_IK.py  read_and_plot_logs.py
include/: base_controller.h  common.h  controller.hpp  joint_listener.h  joint_publisher.h  listener.h  motion_controller.h  osc.h  publisher.h  request_response_server.hpp  sim_layer.hpp  torque_controller.h
include/communication/: listener.h  publisher.h  subscriber.h
include/context/: context.h
include/controllers/: controllers_base.hpp  ik.h  joint_pos.h  joint_vel.h  osc.h  torque_controller.h  velocity_controller.h
include/controllers/joint_space/: joint_position_controller.hpp
include/interpolator/: interpolator.h  min_jerk_interpolator.h
include/tests/: motion_generators.h  test_common.h
include/utils/: ik.h  utils.h
include/zmq/: dyn_model_subscriber.hpp  reference_subscriber.hpp  robot_state_subscriber.hpp  torque_command_publisher.hpp
libfranka_examples/: CMakeLists.txt  Makefile  cartesian_impedance_control.cpp  force_control.cpp  franka_control
src/: debug.cpp  joint_listener.cpp  joint_publisher.cpp  libfranka_zmq_server.cpp  listener.cpp  main.cpp  motion_controller.cpp  osc.cpp  publisher.cc  publisher.cpp  request_response_server.cpp  sim_layer.cpp  test_franka_osc.cpp  test_franka_torque_control.cpp  torque_controller.cc  torque_controller.cpp
src/communication/: listener.cpp  publisher.cpp  subscriber.cpp
src/context/: context.cpp
src/controllers/: ik.cpp  joint_pos.cpp  joint_vel.cpp  motion_controller.cpp  osc.cpp  torque_controller.cpp  velocity_controller.cpp
src/controllers/joint_space/: joint_position_controller.cpp
src/interpolator/: min_jerk_interpolator.cpp
src/runners/: read_states.cpp  runner.cpp  runner_old_ritviks.cpp
src/zmq/: dyn_model_subscriber.cpp  reference_subscriber.cpp  robot_state_subscriber.cpp  torque_command_publisher.cpp
tests/: cartesian_pose.cpp  cartesian_velocity.cpp  joint_velocity.cpp
